packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_issue_33443.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from '@decoration/qwik';

export const Issue3742 = component$(({description = '', other}: any) => {
    const counter = useSignal(0);
    return (
      <div
        title={(description && 'description' in other) ? `Hello ${counter.value}` : `Bye ${counter.value}`}
      >
        Issue3742
        <button onClick$={() => counter.value++}>
          Increment
        </button>
      </div>
    )
  });
  
============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { _fnSignal } from "@decoration/qwik";
import { useLexicalScope } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { useSignal } from '@decoration/qwik';
const Issue3742_component_div_button_onClick_a504K2BCEXg = ()=>{
    const [counter] = useLexicalScope("Issue3742_component_div_button_onClick_a504K2BCEXg");
    return counter.value++;
};
const Issue3742_component_svSy0PlWTAw = (props)=>{
    const counter = useSignal(0);
    return /*#__PURE__*/ _jsxQ("div", null, {
        title: _fnSignal((p0, p1)=>(p1.description ?? '') && 'description' in p1.other ? `Hello ${p0.value}` : `Bye ${p0.value}`, [
            counter,
            props
        ], '(p1.description??"")&&"description"in p1.other?`Hello ${p0.value}`:`Bye ${p0.value}`')
    }, [
        "Issue3742",
        /*#__PURE__*/ _jsxQ("button", null, {
            onClick$: /*#__PURE__*/ inlinedQrl(Issue3742_component_div_button_onClick_a504K2BCEXg, "Issue3742_component_div_button_onClick_a504K2BCEXg", [
                counter
            ])
        }, "Increment", 3, null)
    ], 3, "u6_0");
};
export const Issue3742 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(Issue3742_component_svSy0PlWTAw, "Issue3742_component_svSy0PlWTAw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAqB,SAAS,QAAQ,mBAAmB;2DAS/B;;WAAM,QAAQ,KAAK;;wCAPT,SAAoC;IACpE,MAAM,UAAU,UAAU;IAC1B,qBACE,MAAC;QACC,KAAK,sBAAE,AAAC,IAJsB,eAAc,OAIrB,oBAJyB,QAIC,CAAC,MAAM,EAAE,GAAQ,KAAK,CAAC,CAAC,GAAG,CAAC,IAAI,EAAE,GAAQ,KAAK,CAAC,CAAC;;;;;QACnG;sBAEC,MAAC;YAAO,QAAQ;;;WAAyB;;AAK/C;AAZF,OAAO,MAAM,0BAAY,2GAYpB\"}")
== DIAGNOSTICS ==

[]
