packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_issue_4438.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from '@decoration/qwik';

export const App = component$(() => {
    const toggle = useSignal(false);
    return (
        <>
            <div data-nu={toggle.value ? $localize`singular` : 'plural'}></div>
            <div>{toggle.value ? $localize`singular` : $localize`plural`}</div>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { Fragment as _Fragment } from "@decoration/qwik/jsx-runtime";
import { useSignal } from '@decoration/qwik';
const App_component_ckEPmXZlub0 = ()=>{
    const toggle = useSignal(false);
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", {
                "data-nu": toggle.value ? $localize`singular` : 'plural'
            }, null, null, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, toggle.value ? $localize`singular` : $localize`plural`, 1, null)
        ]
    }, 1, "u6_0");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAqB,SAAS,QAAQ,mBAAmB;kCAE3B,IAAM;IAChC,MAAM,SAAS,UAAU,KAAK;IAC9B,qBACI;;0BACI,MAAC;gBAAI,WAAS,OAAO,KAAK,GAAG,SAAS,CAAC,QAAQ,CAAC,GAAG,QAAQ;;0BAC3D,MAAC,mBAAK,OAAO,KAAK,GAAG,SAAS,CAAC,QAAQ,CAAC,GAAG,SAAS,CAAC,MAAM,CAAC;;;AAGxE;AARA,OAAO,MAAM,oBAAM,+FAQhB\"}")
== DIAGNOSTICS ==

[]
