packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_jsx_keyed_dev.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStore } from '@decoration/qwik';

export const App = component$((props: Stuff) => {
    return (
        <>
            <Cmp key="stuff"></Cmp>
            <Cmp></Cmp>
            <Cmp prop="23"></Cmp>
            <Cmp prop="23" key={props.stuff}></Cmp>
            <p key={props.stuff}>Hello Qwik</p>
        </>
    );
});

============================= project/index.js ==

import { componentQrl } from "@decoration/qwik";
import { qrlDEV } from "@decoration/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("../app_component_kglyfbhvjc0.js"), "App_component_KGLYFBhvJc0", {
    file: "/src/project/project/index.tsx",
    lo: 90,
    hi: 348,
    displayName: "App_component"
}));


Some("{\"version\":3,\"sources\":[\"/src/project/project/index.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM;;;;;IAUhB\"}")
============================= app_component_kglyfbhvjc0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@decoration/qwik/jsx-runtime";
import { _IMMUTABLE } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
export const App_component_KGLYFBhvJc0 = (props)=>{
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxC(Cmp, null, 3, "stuff", {
                fileName: "project/index.tsx",
                lineNumber: 7,
                columnNumber: 13
            }),
            /*#__PURE__*/ _jsxC(Cmp, null, 3, "Q6_0", {
                fileName: "project/index.tsx",
                lineNumber: 8,
                columnNumber: 13
            }),
            /*#__PURE__*/ _jsxC(Cmp, {
                prop: "23",
                [_IMMUTABLE]: {
                    prop: _IMMUTABLE
                }
            }, 3, "Q6_1", {
                fileName: "project/index.tsx",
                lineNumber: 9,
                columnNumber: 13
            }),
            /*#__PURE__*/ _jsxC(Cmp, {
                prop: "23",
                [_IMMUTABLE]: {
                    prop: _IMMUTABLE
                }
            }, 3, props.stuff, {
                fileName: "project/index.tsx",
                lineNumber: 10,
                columnNumber: 13
            }),
            /*#__PURE__*/ _jsxQ("p", null, null, "Hello Qwik", 3, props.stuff, {
                fileName: "project/index.tsx",
                lineNumber: 11,
                columnNumber: 13
            })
        ]
    }, 1, "Q6_2", {
        fileName: "project/index.tsx",
        lineNumber: 6,
        columnNumber: 9
    });
};


Some("{\"version\":3,\"sources\":[\"/src/project/project/index.tsx\"],\"names\":[],\"mappings\":\";;;;yCAG8B,CAAC,QAAiB;IAC5C,qBACI;;0BACI,MAAC,cAAQ;;;;;0BACT,MAAC;;;;;0BACD,MAAC;gBAAI,MAAK;;oBAAL,IAAI;;;;;;;0BACT,MAAC;gBAAI,MAAK;;oBAAL,IAAI;;kBAAW,MAAM,KAAK;;;;;0BAC/B,MAAC,iBAAoB,iBAAb,MAAM,KAAK;;;;;;;;;;;AAG/B\"}")
/*
{
  "origin": "project/index.tsx",
  "name": "App_component_KGLYFBhvJc0",
  "entry": null,
  "displayName": "App_component",
  "hash": "KGLYFBhvJc0",
  "canonicalFilename": "app_component_kglyfbhvjc0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    348
  ]
}
*/
== DIAGNOSTICS ==

[]
