packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_lightweight_functional.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@decoration/qwik';

export const Foo = component$(({color}) => {
    return (
        <div>
            <Button {...props} />
            <ButtonArrow {...props} />
        </div>
    );
}, {
    tagName: "my-foo",
});

export function Button({text, color}) {
    return (
        <button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
    );
}

export const ButtonArrow = ({text, color}) => {
    return (
        <button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
    );
}

============================= foo_component_htdrsvublie.tsx (ENTRY POINT)==

import { Button } from "./test";
import { ButtonArrow } from "./test";
export const Foo_component_HTDRsvUbLiE = (props1)=>{
    return <div>

            <Button {...props}/>

            <ButtonArrow {...props}/>

        </div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,UAAa;IACvC,QACK,IAAI;;YACD,CAAC,QAAQ,GAAG,KAAK,GAAI;;YACrB,CAAC,aAAa,GAAG,KAAK,GAAI;;QAC9B,EAAE;AAEV\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "foo_component_htdrsvublie",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    221
  ]
}
*/
============================= buttonarrow_button_onclick_9npo43figik.tsx (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const ButtonArrow_button_onClick_9npo43fIGik = ()=>{
    const [color, text] = useLexicalScope("ButtonArrow_button_onClick_9npo43fIGik");
    return console.log(text, color);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";sDAsB2C;;WAAI,QAAQ,GAAG,CAAC,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "ButtonArrow_button_onClick_9npo43fIGik",
  "entry": null,
  "displayName": "ButtonArrow_button_onClick",
  "hash": "9npo43fIGik",
  "canonicalFilename": "buttonarrow_button_onclick_9npo43figik",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    509,
    537
  ]
}
*/
============================= button_button_onclick_nsm0jyv00jw.tsx (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const Button_button_onClick_NsM0JYV00Jw = ()=>{
    const [color, text] = useLexicalScope("Button_button_onClick_NsM0JYV00Jw");
    return console.log(text, color);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";iDAgB2C;;WAAI,QAAQ,GAAG,CAAC,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "Button_button_onClick_NsM0JYV00Jw",
  "entry": null,
  "displayName": "Button_button_onClick",
  "hash": "NsM0JYV00Jw",
  "canonicalFilename": "button_button_onclick_nsm0jyv00jw",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    349,
    377
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./foo_component_htdrsvublie"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});
export function Button({ text , color  }) {
    return <button onColor$={color} onClick$={/*#__PURE__*/ qrl(()=>import("./button_button_onclick_nsm0jyv00jw"), "Button_button_onClick_NsM0JYV00Jw", [
        color,
        text
    ])}>{text}</button>;
}
export const ButtonArrow = ({ text , color  })=>{
    return <button onColor$={color} onClick$={/*#__PURE__*/ qrl(()=>import("./buttonarrow_button_onclick_9npo43figik"), "ButtonArrow_button_onClick_9npo43fIGik", [
        color,
        text
    ])}>{text}</button>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,wGAOhB;IACC,SAAS;AACb,GAAG;AAEH,OAAO,SAAS,OAAO,EAAC,KAAI,EAAE,MAAK,EAAC,EAAE;IAClC,QACK,OAAO,UAAU,OAAO;;;SAAyC,OAAO;AAEjF,CAAC;AAED,OAAO,MAAM,cAAc,CAAC,EAAC,KAAI,EAAE,MAAK,EAAC,GAAK;IAC1C,QACK,OAAO,UAAU,OAAO;;;SAAyC,OAAO;AAEjF,EAAC\"}")
== DIAGNOSTICS ==

[]
